[project]
name = "greenbeauty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "anthropic>=0.10.0",
    "jinja2>=3.1.3",
]

[project.scripts]
greenbeauty = "greenbeauty.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/greenbeauty"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"templates" = "greenbeauty/templates"

[tool.ruff.lint]
extend-select = ["I"]